--- a/src/main/resources/templates/recipe/ingredient/show.html
+++ b/src/main/resources/templates/recipe/ingredient/show.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-    <title>Recipe Home</title>
+    <title>Ingredient</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"
@@ -22,40 +21,25 @@
             th:src="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.js} "></script>
 </head>
 <body>
+
 <div class="container-fluid mt-3 " >
     <div class="row">
         <div class="col-md-10 offset-md-1 ">
             <div class="card border border-info ">
-                <div class="card-header bg-info">
-                    <div class="row">
-                        <div class="col-md-10 ">
-                            <h1 class="panel-title h2 text-center text-white text-uppercase">My Recipes</h1>
-                        </div>
-                        <div class="col-md-2">
-                            <a class="btn btn-light" href="#" th:href="@{'/recipe/new'}" role="button">AddRecipe</a>
-                        </div>
-                    </div>
+                <div class="card-header bg-info text-white text-capitalize h2">
+                    Ingredients
                 </div>
                 <div class="card-body">
-                    <table class="table table-hover table-striped " th:if="${not #lists.isEmpty(recipes)}" >
+                    <table class="table table-hover table-striped "  >
                         <thead>
                         <tr>
                             <th>ID</th>
                             <th>Description</th>
-                            <th>View</th>
-                            <th>Update</th>
-                            <th>Delete</th>
 
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:remove="all">
-                            <td>123</td>
-                            <td >Tasty Goodnees 1</td>
-                            <td><a href="#">View</a></td>
-                            <td><a href="#">Update </a></td>
-                            <td><a href="#">Delete </a></td>
-                        </tr>
+
                         <tr th:remove="all">
                             <td >12333</td>
                             <td >Tasty Goodnees 2</td>
@@ -63,12 +47,9 @@
                             <td><a href="#">Update </a></td>
                             <td><a href="#">Delete </a></td>
                         </tr>
-                        <tr th:each="recipe : ${recipes}">
-                            <td th:text="${recipe.id}">334</td>
-                            <td th:text="${recipe.description}">Tasty Goodnees 3</td>
-                            <td><a href="#" th:href="@{'recipe/'+ ${recipe.id}+'/show'}">View</a> </td>
-                            <td><a href="#" th:href="@{'recipe/'+${recipe.id}+'/update'}">Update</a></td>
-                            <td><a href="#" th:href="@{'recipe/'+${recipe.id}+'/delete'}">Delete</a></td>
+                        <tr>
+                            <td th:text="${ingredient.id}">334</td>
+                            <td th:text="${ingredient.amount}+' '+${ingredient.unitOfMeasure.getUom()}+' '+${ingredient.ingDescription}">Tasty Goodnees 3</td>
                         </tr>
                         </tbody>
 
@@ -77,10 +58,7 @@
             </div>
         </div>
     </div>
-
-
 </div>
-
 
 </body>
 </html>
